Fixed spacing in archives on small screens

--- a/www/wp-content/themes/romaricpascal.is/scss/style.scss
+++ b/www/wp-content/themes/romaricpascal.is/scss/style.scss
@@ -148,6 +148,7 @@ img {
 
 p, ul, ol, dl {
   margin-top:0;
+  margin-bottom: 0;
   &:not(:last-child) {
     margin-bottom: 1em;
   }
